--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 baseurl: /smart2-doc
+pygments: true
+markdown: redcarpet
+redcarpet:
+  extensions:
+    - hard_wrap
+    - no_intra_emphasis
+    - autolink
+    - strikethrough
+    - fenced_code_blocks
