--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,12 @@
 baseurl: /smart2-doc
 
+safe:         false
+include:      [".htaccess"]
+exclude:      []
+keep_files:   [".git", ".svn"]
+encoding:     "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+
 markdown: kramdown
 highlighter: rouge
 lsi:         false
